--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,9 @@ a.nav-link {
 
 /* footer */
 
+.copyright {
+    text-align: center;
+}
 .footer-logo-img {
     max-width: 200px;
 }
@@ -238,5 +241,105 @@ ol.about-benefit li {
 h5.card-title {
     padding-bottom: 20px;
     padding-top: 0px;
+}
+ .one, .five ,.nine {
+    font-size:300px;
+}
+.four img ,.eight img {
+    height: 150px;
+}
+.two,.six,.ten{
+    font-weight: 600;
+    font-size: 40px;
+}
+
+
+.one{
+    position:relative;
+    top:200px;
+    
+}
+.two{
+position:relative;
+    top:200px;
+    left:150px;
+    
+}
+.three{
+    width: 400px;
+    position: relative;
+    top: 250px;
+    left: 100px;
+}
+.five{
+    position:relative;
+    top:150px;
+    
+}
+
+.six{position:relative;top: 185px;left:150px;}
+.seven{
+    width:400px;
+position:relative;
+    top:200px;
+    left:150px;
+}
+.nine{
+    position:relative;
+    top:50px;
+    
+}
+.ten{
+position:relative;
+    top:100px;
+    left:150px;
+    
+}
+.eleven{
+    width:400px;
+position:relative;
+    top:100px;
+    left:150px;
+}
+
+ .four {
+    position: relative;
+    top: 122px;
+    left: 450px;
+}
+.eight {
+    position: relative;
+    top: 100px;
+    left: 800px;
+} 
+ .five,.six,.seven{
+left:450px;
+}
+.nine,.ten,.eleven{
+left:950px;
+}  
+
+
+.keyfigure .figures-section .content-section .plus:after {
+    content: '+';
+}
+div.features-box ul li {
+    display: inline-block;
+    width: 33%;
+}
+.figures-section {
+    text-align: center;
+}
+section.keyfigure {
+    padding-top: 150px;
+}
+.features-box h2 {
+    text-align:center;
+    margin-bottom:20px;
+    /* padding-bottom:20px; */
+}
+footer {
+    padding-top: 80px;
+    background-color: lightblue;
 }
 /* home page start */
