--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@
 html,
 body {
     height: 100%;
+    /* overflow-x: hidden; */
 }
 
 ol,
@@ -147,7 +148,7 @@ a.nav-link {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 1;
   }
 main {
     /* Add padding to the top of the content to prevent it from being hidden behind the header */
@@ -210,20 +211,6 @@ ol.about-benefit li {
     list-style: '✓';
     font-size: 16px;
 }
-/* #welcome_section::before {
-    content: "";
-    background: #000000;
-    width: 220%;
-    position: absolute;
-    height: 112%;
-    -webkit-transform: rotate(-25deg);
-    transform: rotate(-25deg);
-    left: -60%;
-    top: 26%;
-    display: inline-block;
-    opacity:10%;
-    z-index:1;
-} */
 .footer-wrapper.row .col-sm-4:first-child {
       text-align: left; 
     }
@@ -300,6 +287,7 @@ h2.faq-heading {
 }
 .accordion-button:not(.collapsed) {
     background-color: lightblue;
+    box-shadow: lightblue;
     }
 
 section.faq-section {
@@ -445,22 +433,6 @@ position:absolute;
 }
 /* glide slider code */
 
-/* swiper code */
-/* html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-} */
-
 .swiper {
   width: 100%;
   padding-top: 50px;
@@ -493,4 +465,20 @@ p.card-text {
 }
 h5.card-title.plan-name {
     text-align: center;
+}
+
+img.card-img-top.how-can-i-help {
+    width: 50px;
+    height:50px;
+}
+.card.how-can-i-help .card-body {
+    display: flex;
+    height: 200px;
+}
+.card-content {
+    margin-left: 20px;
+    text-align: center;
+}
+h5.card-title.plan-name.basic-plan {
+    padding-top: 40px;
 }
