--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,12 +192,9 @@ h2.welcome-quote{
     color: white;
     border: white;
 }
-.welcome-section{
-    background-color:#fafafa
-}
-.about-section{
-    margin-top: 75px;
-    margin-bottom: 75px;
+
+section:nth-child(odd){
+    background-color:#efefef
 }
 h2.about-heading {
     font-size: 40px;
@@ -249,19 +246,22 @@ h5.card-title {
 
 
 
-.keyfigure .figures-section .content-section .plus:after {
+ .keyfigure-section .figures-section .content-section .plus:after {
     content: '+';
-}
-div.features-box ul li {
-    display: inline-block;
-    width: 33%;
 }
 .figures-section {
     text-align: center;
+} 
+.features-box{
+    display: flex;
+    justify-content: space-evenly;
 }
-section.keyfigure {
-    padding-top: 50px;
-    padding-bottom:50px;
+section:first-of-type{
+    margin-bottom: 40px;
+}
+section:not(:first-of-type){
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 .features-box h2 {
     text-align:center;
@@ -272,10 +272,7 @@ footer {
     padding-top: 80px;
     background-color: lightblue;
 }
-section.success-stories-section {
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
+
 .row.faq-row {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -286,12 +283,8 @@ h2.faq-heading {
     text-align:center;
 }
 
-section.faq-section {
-    padding: 50px 0px;
-}
-section.how-can-i-help {
-    padding: 50px 0px;
-}
+
+
 
 a.backToTopBtn {
     display: none;
@@ -348,6 +341,18 @@ position:absolute;
     bottom:300px;
     right: -64px;
 }
+.card-footer {
+    text-align: center;
+}
+.plan-main-div {
+    display: flex;
+    justify-content: space-around;
+}
+.plan-box {
+    padding: 15px;
+    border: 1px #d5d5d5 solid;
+    border-radius:10px;
+}
 .card {
     margin-bottom: 1px;
 }
@@ -376,9 +381,7 @@ position:absolute;
 #navbar .navbar-nav .nav-link {
     color: white;
 }
-section.plan-pricing {
-    margin: 50px 0px;
-}
+
 p.card-text {
     margin: 0px 0px 20px;
     text-align: center;
@@ -496,3 +499,33 @@ h5.card-title.plan-name {
        top:66%;
        left:60%
    } 
+   .steps.row {
+    margin-top: 100px;
+}
+
+div.form
+{
+    display: block;
+    text-align: center;
+}
+form
+{
+    display: inline-block;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin-inline:auto;
+    text-align: left;
+}
+p.contact-us-para, h2.contact-us-heading {
+    text-align: center;
+}
+.welcome-image{
+    height: 80vh;
+    text-align: center;
+}
+.form-submit-button{
+    text-align: center;
+}
+button.btn.btn-primary {
+    padding: 10px 50px;
+}
