--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ a.nav-link {
   }
 main {
     /* Add padding to the top of the content to prevent it from being hidden behind the header */
-    padding-top: 150px; /* Adjust according to your header's height */
+    padding-top: 119px; /* Adjust according to your header's height */
   }
 /* header */
 
@@ -503,7 +503,7 @@ div.form
     padding: 42px;
     box-shadow: 0px 10px 50px hsla(240,7%,62%,1);
 }
-form
+div.form form
 {
     display: inline-block;
     /* margin-left: auto;
@@ -562,14 +562,14 @@ div.heading h1 {
     background-repeat:   no-repeat;
     background-position: top bottom;
     height: 100%;
-    min-height: 70vh;
+    min-height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .heading-faq h1{
     text-align: center;
-    
+    color: white;
 }
 .content-faq{
     padding: 50px 0px;
@@ -587,9 +587,10 @@ div.heading h1 {
 .container-fluid.header-contact-info {
     display: flex;
     justify-content: space-between;
-    padding-block: 10px;
+    padding-block: 5px;
     border-bottom: 1px white solid;
     background-color: lightblue;
+    font-size: 15px;
 }
 .header-phone > * {
     margin-inline: 10px;
@@ -623,10 +624,80 @@ li.nav-item:last-child {
     background-color:#25d366;
     color: white;
     padding:10px;
+    font-weight: 500;
 }
-.get-started-contact-details ul li:nth-child(4) a{
+/* .get-started-contact-details ul li:nth-child(4) a{
     border-radius: 5px;
     background: linear-gradient(0.25turn,#f9ce34, #ee2a7b, #6228d7);
     color: white;
     padding:10px;
+} */
+
+.contact-us-container {
+    display: flex;
+}
+.contact-us-container >* {
+    flex: 1;
+} 
+.contact-us-contact-details ul li{
+    margin-block:20px;
+}
+.contact-us-contact-details{
+    margin-left:10%;
+}
+
+/* backgrond image  */
+/* .contact-us-section{
+    position: relative;
+}
+.contact-us-section .container:after {
+    content:'';
+    background: url('/assets/images/pexels-valeria-ushakova-3094230.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: absolute;
+    top:0px;
+    left: 0px;
+    width:100%;
+    height:100%;
+    z-index:-1;
+    opacity: 0.2; 
+} */
+/* backgrond image  */
+
+.heading-contact-us {
+    background-image: url(/assets/images/pexels-valeria-ushakova-3094230.jpg);
+    background-size:     cover;                    
+    background-repeat:   no-repeat;
+    background-position: center center;
+    height: 100%;
+    min-height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+.gallery > * {
+flex-basis: 350px; width: 350px;
+}
+.gallery-image img {
+object-fit: cover;
+max-width: 100%;
+height: auto;
+vertical-align: middle;
+border-radius: 5px;
+}
+section.transformations-page-section div h1,section.transformations-page-section div p{
+text-align:center;
+padding-block:10px;
+}
+section.transformations-page-section div h1{
+padding-block:100px;
 }
