--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -39,3 +39,15 @@
         padding-inline:3%;
         border-radius:5px;
     }
+
+    .heading-contact-us {
+        background-image: url(/assets/images/for-contact.jpeg);
+        background-size:     cover;                    
+        background-repeat:   no-repeat;
+        background-position: center center;
+        height: 100%;
+        min-height: 60vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
