--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,11 +397,11 @@ left: 100%;
 @media (max-width:800px) {
     .glide__arrow--left{
     position:absolute;
-    right: 100%;;
+    right: 90%;
     }
     .glide__arrow--right{
     position:absolute;
-    left: 100%;
+    left: 90%;
     }
 }
 /* glide slider code */
